sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:6: error: not found: value j
    for(j<- 0 to j){
                 ^